# refactoring_list

./: .gitignore  CMakeLists.txt  Makefile  linked_list  test
includes/: linus_list.h  list.h
linked_list.dSYM/Contents/Resources/DWARF/: linked_list
srcs/: ft_list_del.c  ft_list_init.c  ft_list_print.c  ft_list_push_after_node.c  ft_list_push_back.c  ft_list_push_before_node.c  ft_list_push_front.c  ft_list_size.c  ft_list_str_split.c  ft_list_to_tab.c  list_del.c  list_init.c  list_print.c  list_push_after_node.c  list_push_back.c  list_push_before_node.c  list_push_front.c  list_size.c  main.c
